--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,17 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    
+    "paths": {
+      "@angular/*": [
+        "../node_modules/@angular/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
   }
+  
 }
