--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@angular/compiler": "~9.0.7",
     "@angular/core": "~9.0.7",
     "@angular/forms": "~9.0.7",
+    "@angular/localize": "^9.1.4",
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "angular-datatables": "^9.0.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^4.4.1",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
     "jquery": "^3.5.0",
